--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,7 +8,7 @@
             "type": "image/png"
         }
     ],
-    "start_url": "./index.html",
+    "start_url": "./",
     "display": "standalone",
     "theme_color": "#f0ad00",
     "background_color": "#f0ad00"
