--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,7 +4,17 @@
     "icons": [
         {
             "src": "favicon.ico",
+            "sizes": "16x16",
+            "type": "image/ico"
+        },
+        {
+            "src": "favicon.ico",
             "sizes": "192x192",
+            "type": "image/ico"
+        },
+        {
+            "src": "favicon.png",
+            "sizes": "512x512",
             "type": "image/png"
         }
     ],
