--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-    "short_name": "Elm Spa Boilerplate",
+    "short_name": "Elm Spa",
     "name": "A boilerplate to easily create Spa in Elm",
     "icons": [
         {
